Initial draft complete

--- a/openings.html
+++ b/openings.html
@@ -1,122 +1,275 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+	#more {
+		display: none;
+	}
+</style>
+
 <!-- Mirrored from web.stanford.edu/~kozyraki/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:06:09 GMT -->
+
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Personal webpage" />
 	<meta name="keywords" content="Monowar, H., Bhuyan, Umeå University, umu, computing science" />
-	<meta name="author" content="Monowar Bhuyan"/>
+	<meta name="author" content="Monowar Bhuyan" />
 	<link rel="stylesheet" type="text/css" href="monowar.css" title="monowar" media="screen,projection" />
 	<title>Monowar Bhuyan | AI Researcher at Umeå University</title>
+
 	<head>
-	 <link rel="icon" href="pics/umu.ico" type="image/ico" sizes="16x16"/>
+		<link rel="icon" href="pics/umu.ico" type="image/ico" sizes="16x16" />
 	</head>
 </head>
 
 <body>
-<div id="container" >
-	<div id="header" >
-			<img style="max-height:100px;float: left;padding-right: 10px;padding-top: 5px;padding-left: 5px;" src="pics/umu.svg"/>
-		<h1> Monowar Bhuyan   </h1>
-		<h2> Assistant Professor of Computing Science, Umeå University </h2>
-	</div>
+	<div id="container">
 
-	<div id="navigation">
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="group.html">Group</a></li>
-			<li><a href="members.html">Members</a></li>
-		<li><a href="research.html">Research</a></li>
-		<li><a href="publications.html">Publications</a></li>
-		<li class="selected"><a href="openings.html">Openings</a></li>
-		<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</div>
+		<div id="header">
+			<div id="main_logo">
+				<img src="pics/umu.svg" />
+			</div>
+			<div id="department">
+				<h1>Department of Computing Science</h1>
+			</div>
+			<div id="border_dept_fac">
+			</div>
+			<div id="faculty">
+				<h1>Faculty of Science and Technology</h1>
+			</div>
+		</div>
 
-<div id="content">
-  <a name="current"> </a>
-	<h3>Postdocs</h3>
-We are looking for a <a href="https://umu.varbi.com/en/what:job/jobID:341327/" target="_blank">postdoctoral researcher</a> to work on robust machine learning and data-centric optimization. Very competitive salary. A tentative start date is September 1, 2020. The opening is for 2 years, and possibly renewable for more years (subject to the availability of funding). Candidates with a strong background in machine learning, distributed systems, security and privacy, anomaly detection, machine learning perspective optimization are encouraged to apply. In particular, an ideal candidate would have had previous experience exploring the "design and implementation of fundamental machine learning algorithms" either by improvement or new algorithms. Also, it could be domain-dependent or independent. This position will be at Umeå University, Sweden. Applicants are expected at minimum to have excellent verbal and written English skills, sound logic, and demonstrated research record/potential in the above area. If interested in this position, please email me at <a href="mailto: monowar@cs.umu.se" target="_top">monowar@cs.umu.se</a> to discuss further. In your first email, please provide your C.V. in PDF.<br><br>
+		<div class="bio">
+			<img id="profile_img" src="pics/mb_web.jpg">
+			<div id="affiliation">
+				<h3>Affiliations</h3>
+				<br>
+				<li><a href="https://www.umu.se/en/staff/monowar-bhuyan/" target="_blank">Assistant Professor</a>, Umeå
+					University</li>
+				<li><a href="https://cloudresearch.org/" target="_blank">Senior Member</a>, ADSLab </li>
+				<li>Leading <a href="https://people.cs.umu.se/monowar/group.html" target="_blank">Cyber Analytics and
+						Learning Group</a></li>
+				<li><a href="https://www.umu.se/en/research/our-research/features-and-news/artificial-intelligence/"
+						target="_blank">Member</a>, Umeå AI </li>
+				<br>
+			</div>
+			<div id="external_links">
+				<h3>Links</h3>
+				<br>
+				<li><a href="https://www.umu.se/en/research/features-and-news/artificial-intelligence/"
+						target="_blank">Umeå
+						AI</a></li>
+				<li><a href="https://www.umu.se/en/" target="_blank">Umeå University</a></li>
+				<li><a href="https://www.umu.se/en/department-of-computing-science/" target="_blank">Dept. of Computing
+						Science</a></li>
+				<br>
+				<li>Email: monowar (at) cs.umu.se</li>
+				<br>
+				<a href="https://scholar.google.co.in/citations?user=0oWAA6MAAAAJ&hl=en&oi=ao" target="_blank">
+					<img src="pics/sg.png" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://www.linkedin.com/in/monowar-bhuyan-4a034416/" target="_blank">
+					<img src="pics/linkedin.png" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://www.researchgate.net/profile/Monowar_Bhuyan" target="_blank">
+					<img src="pics/rg.png" alt="HTML tutorial" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://github.com/mbhuyan" target="_blank">
+					<img src="pics/gh.png" alt="HTML tutorial" style="width:32px;height:32px;border:0">
+				</a>
+			</div>
+		</div>
 
-<h3>Ph.D. Students</h3>
-In Autonomous Distributed Systems Lab (ADS Lab), we are looking for creative, self-motivated and hardworking graduate students who want to pursue a Ph.D. degree by working with us on machine learning, systems security, privacy-aware learning, trustworthy learning, robust learning, distributed system, anomaly detection, AIOps, and machine learning perspective optimizations. Solid background of computer science, with strength in system building, data analysis, and usable theory are required. If interested in joining our group, please do the following.
+		<div class="navigation">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<div class="nav_border"></div>
+				<li><a href="group.html">Group</a></li>
+				<div class="nav_border"></div>
+				<li><a href="members.html">Members</a></li>
+				<div class="nav_border"></div>
+				<li><a href="research.html">Research</a></li>
+				<div class="nav_border"></div>
+				<li><a href="publications.html">Publications</a></li>
+				<div class="nav_border"></div>
+				<li class="selected"><a href="openings.html">Openings</a></li>
+				<div class="nav_border"></div>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
 
-<ul>
-<li>Read two (2) of our recent publications (from the past 1 years) to make sure that you are interested in what we do.</li>
+		<div class="contents">
+			<a name="current"> </a>
+			<h3 class="content_separation">Postdocs</h3>
+			<div class="profile_sections">
+				We are looking for a <a href="https://umu.varbi.com/en/what:job/jobID:341327/"
+					target="_blank">postdoctoral
+					researcher</a> to work on robust machine learning and data-centric optimization. Very competitive
+				salary. A tentative start date is September 1, 2020. The opening is for 2 years, and possibly renewable
+				for
+				more years (subject to the availability of funding). Candidates with a strong background in machine
+				learning, distributed systems, security and privacy, anomaly detection, machine learning perspective
+				optimization are encouraged to apply. In particular, an ideal candidate would have had previous
+				experience
+				exploring the "design and implementation of fundamental machine learning algorithms" either by
+				improvement
+				or new algorithms. Also, it could be domain-dependent or independent. This position will be at Umeå
+				University, Sweden. Applicants are expected at minimum to have excellent verbal and written English
+				skills,
+				sound logic, and demonstrated research record/potential in the above area. If interested in this
+				position,
+				please email me at <a href="mailto: monowar@cs.umu.se" target="_top">monowar@cs.umu.se</a> to discuss
+				further. In your first email, please provide your C.V. in PDF.<br><br>
+			</div>
 
-<li>Send me (at <a href="mailto: monowar@cs.umu.se" target="_top">monowar@cs.umu.se</a>) a brief summary of your background and a C.V. (PDF or txt files only! Should include your educational background, major coursework, main skills, and any publication), a summary of the 2 papers you read, and what you did not like about them. In the title of your first email, put “Potential Ph.D. student at ADS Lab” to let me know that you have read this note.</li>
-</ul>
+			<h3 class="content_separation">Ph.D. Students</h3>
+			<div class="profile_sections">
+				In Autonomous Distributed Systems Lab (ADS Lab), we are looking for creative, self-motivated and
+				hardworking
+				graduate students who want to pursue a Ph.D. degree by working with us on machine learning, systems
+				security, privacy-aware learning, trustworthy learning, robust learning, distributed system, anomaly
+				detection, AIOps, and machine learning perspective optimizations. Solid background of computer science,
+				with
+				strength in system building, data analysis, and usable theory are required. If interested in joining our
+				group, please do the following.
+				<br>
+				<br>
+				<ul>
+					<li>Read two (2) of our recent publications (from the past 1 years) to make sure that you are
+						interested
+						in what we do.</li>
+					<li>Send me (at <a href="mailto: monowar@cs.umu.se" target="_top">monowar@cs.umu.se</a>) a brief
+						summary
+						of your background and a C.V. (PDF or txt files only! Should include your educational
+						background,
+						major coursework, main skills, and any publication), a summary of the 2 papers you read, and
+						what
+						you did not like about them. In the title of your first email, put “Potential Ph.D. student at
+						ADS
+						Lab” to let me know that you have read this note.</li>
+				</ul>
+				<br>
 
-All students admitted and accepted to work in my group will be funded in a form or another for their course of study.
-<br>
-<ul>
-<li><b>Are those Ph.D. positions guaranteed funding?</b><br>
-Yes. Funding is available to all qualified Ph.D. students.</li>
-<br>
-<li><b>I don't have GRE and TOEFL scores. Can I still apply?</b><br>
-Yes, GRE and TOEFL (for international students) aren't mandatory, however, we appreaciate to have TOEFL score before admission.</li>
-<br>
-<li><b>I am from country X, can I still apply?</b><br>
-Anyone from country X can apply, the Department and the University have no problem.</li>
-<br>
-<li><b>How long does it take to finish a Ph.D.?</b><br>
-Typically 4 years but if you do teaching 20% every year then the funding will be extended upto 5 years.</li>
-<br>
-<li><b>Can you tell me my chances of getting admitted by looking at my C.V.?</b><br>
-No. Admission is not decided by me.</li>
-<br>
-<li><b>How long should students spend on their research (in your group)?</b><br>
-Long enough to do their work and graduate.</li>
-<br>
-<li><b>Would it be possible to work with you on project X?</b><br>
-Only if I am currently working on X.</li>
-<br>
-<li><b>Can we talk? I am a student at UmU</b><br>
-Yes. Follow the instructions above.</li>
-<br>
-<li><b>Can we talk? I am a student from country X.</b><br>
-Yes. Follow the instructions above.</li>
-</ul>
-<br>
+				All students admitted and accepted to work in my group will be funded in a form or another for their
+				course
+				of study.
+				<br>
+				<br>
+				<ul>
+					<li><b>Are those Ph.D. positions guaranteed funding?</b><br>
+						Yes. Funding is available to all qualified Ph.D. students.</li>
+					<li><b>I don't have GRE and TOEFL scores. Can I still apply?</b><br>
+						Yes, GRE and TOEFL (for international students) aren't mandatory, however, we appreaciate to
+						have
+						TOEFL score before admission.</li>
+					<li><b>I am from country X, can I still apply?</b><br>
+						Anyone from country X can apply, the Department and the University have no problem.</li>
+					<li><b>How long does it take to finish a Ph.D.?</b><br>
+						Typically 4 years but if you do teaching 20% every year then the funding will be extended upto 5
+						years.</li>
+					<li><b>Can you tell me my chances of getting admitted by looking at my C.V.?</b><br>
+						No. Admission is not decided by me.</li>
+					<li><b>How long should students spend on their research (in your group)?</b><br>
+						Long enough to do their work and graduate.</li>
+					<li><b>Would it be possible to work with you on project X?</b><br>
+						Only if I am currently working on X.</li>
+					<li><b>Can we talk? I am a student at UmU</b><br>
+						Yes. Follow the instructions above.</li>
+					<li><b>Can we talk? I am a student from country X.</b><br>
+						Yes. Follow the instructions above.</li>
+				</ul>
+			</div>
 
-<h3>M.Sc. Students</h3>
-I have research projects for M.Sc. thesis students. If you are a self-motivated and hardworking student at UmU and would like to work on cool research projects in the above areas, send me an email to find a time to talk. NOTE: Students are expected to spend no less than 20 hours per week on their research as part of this position.
-<br><br>
+			<h3 class="content_separation">M.Sc. Students</h3>
+			<div class="profile_sections">
+				I have research projects for M.Sc. thesis students. If you are a self-motivated and hardworking student
+				at
+				UmU and would like to work on cool research projects in the above areas, send me an email to find a time
+				to
+				talk. NOTE: Students are expected to spend no less than 20 hours per week on their research as part of
+				this
+				position.
+			</div>
 
-<h3>Undergraduate Students</h3>
-Computer Science undergraduate students (senior or junior only) interested in working in our group should first consider taking fundamental computer science courses (e.g., computer networks, operating systems). Students with a solid computer science background and skills (i.e., programming -- preferably in Python, R, Java, algorithms, analysis, and curiosity) should contact me to set up a time to discuss potential projects.
-<br>
-<br>
+			<h3 class="content_separation">Undergraduate Students</h3>
+			<div class="profile_sections">
 
-<h3>Interns</h3>
-I can host interns with exceptions and who can complement our research areas of interest.<br><br>
-
-<h3>Visitors</h3>
-I occasionally have space and time to host fully-funded research visitors. Area-wise, I am interested in hosting visitors who can complement our areas of interest, including machine learning, data-driven security, online privacy, distributed learning, robuts learning, anomaly detection, and machine learning perspective optimization. A major theme that we seek collaboration on is big data security, machine learning, AI, trustworthy learning, privacy-aware learning, etc., and addressing representation, processing and analysis, decision-making, optimization mainly for security and privacy applications. If you are interested, email me to discuss such opportunities.
-<br><br>
-
-
-</div>
+				Computer Science undergraduate students (senior or junior only) interested in working in our group
+				should
+				first consider taking fundamental computer science courses (e.g., computer networks, operating systems).
+				Students with a solid computer science background and skills (i.e., programming -- preferably in Python,
+				R,
+				Java, algorithms, analysis, and curiosity) should contact me to set up a time to discuss potential
+				projects.
+			</div>
 
 
-	<div id="footer">
-		<p>&copy; 2022 Monowar Bhuyan </p>
-	</div>
+			<h3 class="content_separation">Interns</h3>
+			<div class="profile_sections">
+				I can host interns with exceptions and who can complement our research areas of interest.
+
+			</div>
+			<h3 class="content_separation">Visitors</h3>
+			<div class="profile_sections">
+				I occasionally have space and time to host fully-funded research visitors. Area-wise, I am
+				interested in
+				hosting visitors who can complement our areas of interest, including machine learning, data-driven
+				security,
+				online privacy, distributed learning, robuts learning, anomaly detection, and machine learning
+				perspective
+				optimization. A major theme that we seek collaboration on is big data security, machine learning,
+				AI,
+				trustworthy learning, privacy-aware learning, etc., and addressing representation, processing and
+				analysis,
+				decision-making, optimization mainly for security and privacy applications. If you are interested,
+				email me
+				to discuss such opportunities.
+			</div>
+			<br>
+			<br>
+			<br>
+
+
+		</div>
+
+
+		<div class="navigation">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<div class="nav_border"></div>
+				<li><a href="group.html">Group</a></li>
+				<div class="nav_border"></div>
+				<li><a href="members.html">Members</a></li>
+				<div class="nav_border"></div>
+				<li><a href="research.html">Research</a></li>
+				<div class="nav_border"></div>
+				<li><a href="publications.html">Publications</a></li>
+				<div class="nav_border"></div>
+				<li class="selected"><a href="openings.html">Openings</a></li>
+				<div class="nav_border"></div>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+		<div id="footer">
+			<p>&copy; 2023 Monowar Bhuyan </p>
+			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
+		</div>
 
 	</div>
 
 	<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-1848088-2");
-pageTracker._trackPageview();
-} catch(err) {}</script>
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	<script type="text/javascript">
+		try {
+			var pageTracker = _gat._getTracker("UA-1848088-2");
+			pageTracker._trackPageview();
+		} catch (err) { }</script>
 
-	</body>
+</body>
 
 <!-- Mirrored from web.stanford.edu/~kozyraki/archdef.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:15:53 GMT -->
+
 </html>
