--- a/contact.html
+++ b/contact.html
@@ -1,157 +1,245 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+	#more {
+		display: none;
+	}
+</style>
+
 <!-- Mirrored from web.stanford.edu/~kozyraki/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:06:09 GMT -->
+
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Personal webpage" />
 	<meta name="keywords" content="Monowar, H., Bhuyan, Umeå University, umu, computing science" />
-	<meta name="author" content="Monowar Bhuyan"/>
+	<meta name="author" content="Monowar Bhuyan" />
 	<link rel="stylesheet" type="text/css" href="monowar.css" title="monowar" media="screen,projection" />
 	<title>Monowar Bhuyan | AI Researcher at Umeå University</title>
+
 	<head>
- <link rel="icon" href="pics/umu.ico" type="image/ico" sizes="16x16"/>
-</head>
+		<link rel="icon" href="pics/umu.ico" type="image/ico" sizes="16x16" />
+	</head>
 </head>
 
 <body>
-<div id="container" >
-	<div id="header" >
-			<img style="max-height:100px;float: left;padding-right: 10px;padding-top: 5px;padding-left: 5px;" src="pics/umu.svg"/>
-		<h1> Monowar Bhuyan   </h1>
-		<h2> Assistant Professor of Computing Science, Umeå University </h2>
-	</div>
+	<div id="container">
 
-	<div id="navigation">
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="profile.html">Profile</a></li>
-		<li><a href="research.html">Research</a></li>
-		<li><a href="teaching.html">Teaching</a></li>
-		<li><a href="group.html">Group</a></li>
-		<li><a href="publications.html">Publications</a></li>
-		<li><a href="talks.html">Talks</a></li>
-			<li><a href="activities.html">Community Services</a></li>
-		<li><a href="misc.html">Misc</a></li>
-		<li class="selected"><a href="contact.html">Contact</a></li>
-		</ul>
-	</div>
+		<div id="header">
+			<div id="main_logo">
+				<img src="pics/umu.svg" />
+			</div>
+			<div id="department">
+				<h1>Department of Computing Science</h1>
+			</div>
+			<div id="border_dept_fac">
+			</div>
+			<div id="faculty">
+				<h1>Faculty of Science and Technology</h1>
+			</div>
+		</div>
 
+		<div class="bio">
+			<img id="profile_img" src="pics/mb_web.jpg">
+			<div id="affiliation">
+				<h3>Affiliations</h3>
+				<br>
+				<li><a href="https://www.umu.se/en/staff/monowar-bhuyan/" target="_blank">Assistant Professor</a>, Umeå
+					University</li>
+				<li><a href="https://cloudresearch.org/" target="_blank">Senior Member</a>, ADSLab </li>
+				<li>Leading <a href="https://people.cs.umu.se/monowar/group.html" target="_blank">Cyber Analytics and
+						Learning Group</a></li>
+				<li><a href="https://www.umu.se/en/research/our-research/features-and-news/artificial-intelligence/"
+						target="_blank">Member</a>, Umeå AI </li>
+				<br>
+			</div>
+			<div id="external_links">
+				<h3>Links</h3>
+				<br>
+				<li><a href="https://www.umu.se/en/research/features-and-news/artificial-intelligence/"
+						target="_blank">Umeå
+						AI</a></li>
+				<li><a href="https://www.umu.se/en/" target="_blank">Umeå University</a></li>
+				<li><a href="https://www.umu.se/en/department-of-computing-science/" target="_blank">Dept. of Computing
+						Science</a></li>
+				<br>
+				<li>Email: monowar (at) cs.umu.se</li>
+				<br>
+				<a href="https://scholar.google.co.in/citations?user=0oWAA6MAAAAJ&hl=en&oi=ao" target="_blank">
+					<img src="pics/sg.png" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://www.linkedin.com/in/monowar-bhuyan-4a034416/" target="_blank">
+					<img src="pics/linkedin.png" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://www.researchgate.net/profile/Monowar_Bhuyan" target="_blank">
+					<img src="pics/rg.png" alt="HTML tutorial" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://github.com/mbhuyan" target="_blank">
+					<img src="pics/gh.png" alt="HTML tutorial" style="width:32px;height:32px;border:0">
+				</a>
+			</div>
+		</div>
 
-
-
-	<div id="content">
-		<h3>Contact Information</h3>
-		<br>
-		<table>
-			<col width="110">
-		  <col width="440">
-		  <tr>
-		    <td> Address - </td>
-		    <td>Autonomous Distributed Systems Lab</td>
-		  </tr>
-			<tr>
-		    <td> </td>
-		    <td>Department of Computing Science</td>
-		  </tr>
-			<tr>
-		    <td> </td>
-		    <td>Umeå University, SE-901 87, Umeå</td>
-		  </tr>
-			<tr>
-		    <td> </td>
-		    <td>Sweden</td>
-		  </tr><tr>
-		    <td> </td>
-		    <td> </td>
-		  </tr>
-			<tr>
-			<td> </td>
-			<td> </td>
-		</tr>
-		</tr><tr>
-			<td>Office - </td>
-			<td><a href="https://bit.ly/325cCw2" target="_blank">NAT.B2.208</a> Natural Sciences building, 2nd floor (i.e., entrance floor)</td>
-		</tr>
-	</tr>
-	  <tr>
-		<td> </td>
-		<td> </td>
-	</tr>
-	<tr>
-	<td> </td>
-	<td> </td>
-</tr>
-</tr><tr>
-	<td>Phone - </td>
-	<td> </td>
-</tr>
-<tr>
-<td> </td>
-<td> </td>
-</tr>
-</tr><tr>
-		<td>&nbsp;&nbsp;Sweden:</td>
-		<td> +46-90-786-67-05</td>
-	</tr>
-</tr><tr>
-	<td>&nbsp;&nbsp;India:</td>
-	<td>+91-94353-88234 (M)</td>
-</tr>
-<tr>
-<td> </td>
-<td> </td>
-</tr>
-<tr>
-<td> </td>
-<td> </td>
-</tr>
-<tr>
-<td> </td>
-<td> </td>
-</tr>
-</tr><tr>
-	<td>Email - </td>
-	<td><a href="mailto: monowar@cs.umu.se" target="_top">monowar@cs.umu.se</a></td>
-</tr>
-</tr><tr>
-	<td></td>
-	<td><a href="mailto: monowarb@ieee.org" target="_top">monowarb@ieee.org</a></td>
-</tr>
-</table>
-
-
-	</div>
-
-	<div id="subcontent"> <div class="small box"> <strong>Email
-		note: </strong> The best way to contact me is email. Several email receives everyday, hence, it might be late to reply your email. However, it could be good to send a reminder after two days for non-replied email.
-		<br> <br>
-
-		<strong>Voicemail note:</strong> I don't prefer to check voicemail. If I don't
-		answer the phone, send me an email or leave a message
-		with our Lab admin.</div>
+		<div class="navigation">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<div class="nav_border"></div>
+				<li><a href="profile.html">Profile</a></li>
+				<div class="nav_border"></div>
+				<li><a href="research.html">Research</a></li>
+				<div class="nav_border"></div>
+				<li><a href="teaching.html">Teaching</a></li>
+				<div class="nav_border"></div>
+				<li><a href="group.html">Group</a></li>
+				<div class="nav_border"></div>
+				<li><a href="publications.html">Publications</a></li>
+				<div class="nav_border"></div>
+				<li><a href="talks.html">Talks</a></li>
+				<div class="nav_border"></div>
+				<li><a href="activities.html">Community Services</a></li>
+				<div class="nav_border"></div>
+				<li><a href="misc.html">Misc</a></li>
+				<div class="nav_border"></div>
+				<li class="selected"><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
 
 
 
-	</div>
 
-	<div id="footer">
-		<p>&copy; 2023 Monowar Bhuyan </p>
-	</div>
+		<div class="contents">
+			<h3 class="content_separation">Contact Information</h3>
+			<div id="contacts-section">
+				<div>
+					<table>
+						<col width="110">
+						<col width="290">
+						<tr>
+							<td> Address (post): </td>
+							<td>Department of Computing Science</td>
+						</tr>
+						<tr>
+							<td> </td>
+							<td>Umeå University, SE-901 87, Umeå</td>
+						</tr>
+						<tr>
+							<td> </td>
+							<td>Sweden</td>
+						</tr>
+						<tr>
+							<td> </td>
+							<td> </td>
+						</tr>
+						<tr>
+							<td> </td>
+							<td> </td>
+						</tr>
+						</tr>
+						<tr>
+							<td>Visit Office: </td>
+							<td><a href="https://bit.ly/325cCw2" target="_blank"> MIT.D.246</a>, Floor 2 (i.e., Entrance
+								Floor)
+							</td>
+						</tr>
+						</tr>
+						<tr>
+							<td> </td>
+							<td> </td>
+						</tr>
+						<tr>
+							<td> </td>
+							<td> </td>
+						</tr>
+						</tr>
+						<tr>
+							<td>Phone: </td>
+							<td> +46-90-786-67-05 </td>
+						</tr>
+						</tr>
+						<tr>
+							<td> </td>
+							<td> </td>
+						</tr>
+						<tr>
+							<td> </td>
+							<td> </td>
+						</tr>
+						<tr>
+							<td> </td>
+							<td> </td>
+						</tr>
+						</tr>
+						<tr>
+							<td>Email: </td>
+							<td><a href="mailto: monowar@cs.umu.se" target="_top">monowar@cs.umu.se</a></td>
+						</tr>
+						</tr>
+					</table>
+				</div>
 
-	</div>
+				<div id="subcontent">
+					<div class="small box"> <strong>Email
+							note: </strong> The best way to contact me is email. Several email receives everyday, hence,
+						it
+						might be late to reply your email. However, it could be good to send a reminder after two days
+						for
+						non-replied email.
+						<br> <br>
 
-	<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-1848088-2");
-pageTracker._trackPageview();
-} catch(err) {}</script>
+						<strong>Voicemail note:</strong> I don't prefer to check voicemail. If I don't
+						answer the phone, send me an email or leave a message
+						with our Lab admin.
+					</div>
+
+
+
+				</div>
+
+			</div>
+			
+		</div>
+
+		<div class="navigation">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<div class="nav_border"></div>
+				<li><a href="profile.html">Profile</a></li>
+				<div class="nav_border"></div>
+				<li><a href="research.html">Research</a></li>
+				<div class="nav_border"></div>
+				<li><a href="teaching.html">Teaching</a></li>
+				<div class="nav_border"></div>
+				<li><a href="group.html">Group</a></li>
+				<div class="nav_border"></div>
+				<li><a href="publications.html">Publications</a></li>
+				<div class="nav_border"></div>
+				<li><a href="talks.html">Talks</a></li>
+				<div class="nav_border"></div>
+				<li><a href="activities.html">Community Services</a></li>
+				<div class="nav_border"></div>
+				<li><a href="misc.html">Misc</a></li>
+				<div class="nav_border"></div>
+				<li class="selected"><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+		<div id="footer">
+			<p>&copy; 2023 Monowar Bhuyan </p>
+			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
+		</div>
+
+		<script type="text/javascript">
+			var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+			document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+		</script>
+		<script type="text/javascript">
+			try {
+				var pageTracker = _gat._getTracker("UA-1848088-2");
+				pageTracker._trackPageview();
+			} catch (err) { }</script>
 
 </body>
 
 <!-- Mirrored from web.stanford.edu/~kozyraki/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:15:51 GMT -->
+
 </html>
