--- a/group.html
+++ b/group.html
@@ -1,91 +1,174 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+	#more {
+		display: none;
+	}
+</style>
+
 <!-- Mirrored from web.stanford.edu/~kozyraki/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:06:09 GMT -->
+
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="Personal webpage" />
 	<meta name="keywords" content="Monowar, H., Bhuyan, Umeå University, umu, computing science" />
-	<meta name="author" content="Monowar Bhuyan"/>
+	<meta name="author" content="Monowar Bhuyan" />
 	<link rel="stylesheet" type="text/css" href="monowar.css" title="monowar" media="screen,projection" />
 	<title>Monowar Bhuyan | AI Researcher at Umeå University</title>
+
 	<head>
- <link rel="icon" href="pics/umu.ico" type="image/ico" sizes="16x16"/>
-</head>
+		<link rel="icon" href="pics/umu.ico" type="image/ico" sizes="16x16" />
+	</head>
 </head>
 
 <body>
-<div id="container" >
-	<div id="header" >
-			<img style="max-height:100px;float: left;padding-right: 10px;padding-top: 5px;padding-left: 5px;" src="pics/umu.svg"/>
-		<h1> Monowar Bhuyan   </h1>
-		<h2> Assistant Professor of Computing Science, Umeå University </h2>
-	</div>
+	<div id="container">
 
-	<div id="navigation">
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li class="selected"><a href="group.html">Group</a></li>
-			<li><a href="members.html">Members</a></li>
-		<li><a href="research.html">Research</a></li>
-		<li><a href="publications.html">Publications</a></li>
-		<li><a href="openings.html">Openings</a></li>
-		<li><a href="contact.html">Contact</a></li>
-		</ul>
-	</div>
+		<div id="header">
+			<div id="main_logo">
+				<img src="pics/umu.svg" />
+			</div>
+			<div id="department">
+				<h1>Department of Computing Science</h1>
+			</div>
+			<div id="border_dept_fac">
+			</div>
+			<div id="faculty">
+				<h1>Faculty of Science and Technology</h1>
+			</div>
+		</div>
 
-<div id="content">
-  <a name="current"> </a>
-	<h3>Autonomous Distributed Systems Lab<br></h3>
-	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<i>Cyber Analytics and Learning Wing</i>]</p>
-	<!--&nbsp; for space -->
-	<br>
-	Welcome to this part of <a href="http://cloudresearch.org/" target="_blank">Autonomous Distributed Systems Lab</a>, addressing the security and privacy-aware machine learning and optimization for AI-enabled distributed systems to adapt with the risk that operates in complex, real-world environments.
-<br>
-<br>
-	The mission of this dimension is to advance the state-of-the-art of distributed machine learning, anomaly detection, machine learning perspective optimization, security and privacy, distributed computing for software-defined infrastructures. Currently, we are interested in the following six different problem areas.
-<br><br>
-<ul>
-	<li>Data synthesizing</li>
-	<br>
-	<li>Distributed machine learning</li>
-	<br>
-	<li>Anomaly detection</li>
-	<br>
-	<li>Security and privacy</li>
-	<br>
-	<li>Trustworthy AI</li>
-	<br>
-	<li>Machine learning perspective optimization</li>
-</ul>
-	  Currently, this part of lab consists of seven Ph.D. students and one postdoc, and we are always looking for new excellent applicants. We welcome master’s and undergraduate students to join our group. If you are at UmU, drop me a line to set up a meeting. If not at UmU, look at our openings and opportunities as intern/vistor.
-  <br><br>
-	<p>ADS Lab is led by <a href="https://www8.cs.umu.se/~elmroth/" target="_blank">Professor Erik Elmroth</a> where I am one of the research leaders. For any inquires, email at <a href="mailto: monowar@cs.umu.se" target="_top">monowar@cs.umu.se</a></p>
+		<div class="bio">
+			<img id="profile_img" src="pics/mb_web.jpg">
+			<div id="affiliation">
+				<h3>Affiliations</h3>
+				<br>
+				<li><a href="https://www.umu.se/en/staff/monowar-bhuyan/" target="_blank">Assistant Professor</a>, Umeå
+					University</li>
+				<li><a href="https://cloudresearch.org/" target="_blank">Senior Member</a>, ADSLab </li>
+				<li>Leading <a href="https://people.cs.umu.se/monowar/group.html" target="_blank">Cyber Analytics and
+						Learning Group</a></li>
+				<li><a href="https://www.umu.se/en/research/our-research/features-and-news/artificial-intelligence/"
+						target="_blank">Member</a>, Umeå AI </li>
+				<br>
+			</div>
+			<div id="external_links">
+				<h3>Links</h3>
+				<br>
+				<li><a href="https://www.umu.se/en/research/features-and-news/artificial-intelligence/"
+						target="_blank">Umeå
+						AI</a></li>
+				<li><a href="https://www.umu.se/en/" target="_blank">Umeå University</a></li>
+				<li><a href="https://www.umu.se/en/department-of-computing-science/" target="_blank">Dept. of Computing
+						Science</a></li>
+				<br>
+				<li>Email: monowar (at) cs.umu.se</li>
+				<br>
+				<a href="https://scholar.google.co.in/citations?user=0oWAA6MAAAAJ&hl=en&oi=ao" target="_blank">
+					<img src="pics/sg.png" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://www.linkedin.com/in/monowar-bhuyan-4a034416/" target="_blank">
+					<img src="pics/linkedin.png" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://www.researchgate.net/profile/Monowar_Bhuyan" target="_blank">
+					<img src="pics/rg.png" alt="HTML tutorial" style="width:32px;height:32px;border:0">
+				</a>
+				<a href="https://github.com/mbhuyan" target="_blank">
+					<img src="pics/gh.png" alt="HTML tutorial" style="width:32px;height:32px;border:0">
+				</a>
+			</div>
+		</div>
+
+		<div class="navigation">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<div class="nav_border"></div>
+				<li class="selected"><a href="group.html">Group</a></li>
+				<div class="nav_border"></div>
+				<li><a href="members.html">Members</a></li>
+				<div class="nav_border"></div>
+				<li><a href="research.html">Research</a></li>
+				<div class="nav_border"></div>
+				<li><a href="publications.html">Publications</a></li>
+				<div class="nav_border"></div>
+				<li><a href="openings.html">Openings</a></li>
+				<div class="nav_border"></div>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+
+		<div class="contents">
+			<h3 class="content_separation">Cyber Analytics and Learning Group [ADSlab]<br></h3>
+			<div class="profile_sections">
+			Welcome to this Group of <a href="http://cloudresearch.org/" target="_blank">Autonomous Distributed Systems
+				Lab</a>, addressing the security-aware machine learning and optimization for AI-enabled distributed
+			systems to adapt with the risk that operates in complex and real-world environments.
+			<br>
+			<br>
+			The mission of this dimension is to advance the state-of-the-art of distributed machine learning, anomaly
+			detection, machine learning perspective optimization, systems security, distributed computing for
+			software-defined infrastructures. Currently, we are interested in the following five different problem
+			areas.
+			<br><br>
+			<ul>
+				<li>Machine learning</li>
+				<li>Anomaly detection</li>
+				<li>Systems Security</li>
+				<li>Trustworthy AI</li>
+				<li>Machine learning perspective optimization</li>
+			</ul>
+			<br>
+			Currently, this part of lab consists of eight Ph.D. students and one postdoc, and we are always looking for
+			new excellent applicants. We welcome master’s and undergraduate students to join our group. If you are at
+			UmU, drop me a line to set up a meeting. If not at UmU, look at our openings and opportunities as
+			intern/vistor.
+			<br><br>
+			<p>ADS Lab is led by <a href="https://www8.cs.umu.se/~elmroth/" target="_blank">Professor Erik Elmroth</a>
+				where I am one of the research leaders. For any inquires, email at <a href="mailto: monowar@cs.umu.se"
+					target="_top">monowar@cs.umu.se</a></p>
+			<br><br>
+			</div>
+		</div>
 
 
-
-
-<br><br>
-</div>
-
-
-	<div id="footer">
-		<p>&copy; 2023 Monowar Bhuyan </p>
-	</div>
+		<div class="navigation">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<div class="nav_border"></div>
+				<li class="selected"><a href="group.html">Group</a></li>
+				<div class="nav_border"></div>
+				<li><a href="members.html">Members</a></li>
+				<div class="nav_border"></div>
+				<li><a href="research.html">Research</a></li>
+				<div class="nav_border"></div>
+				<li><a href="publications.html">Publications</a></li>
+				<div class="nav_border"></div>
+				<li><a href="openings.html">Openings</a></li>
+				<div class="nav_border"></div>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+		<div id="footer">
+			<p>&copy; 2023 Monowar Bhuyan </p>
+			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
+		</div>
 
 	</div>
 
 	<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-1848088-2");
-pageTracker._trackPageview();
-} catch(err) {}</script>
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	<script type="text/javascript">
+		try {
+			var pageTracker = _gat._getTracker("UA-1848088-2");
+			pageTracker._trackPageview();
+		} catch (err) { }</script>
 
-	</body>
+</body>
 
 <!-- Mirrored from web.stanford.edu/~kozyraki/archdef.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Dec 2019 05:15:53 GMT -->
+
 </html>
