First sets of changes are introduced

--- a/contact.html
+++ b/contact.html
@@ -223,10 +223,16 @@
 				<li class="selected"><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div id="footer">
-			<p>&copy; 2023 Monowar Bhuyan </p>
-			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
-		</div>
+			<div id="footer">
+				<div>&copy; 2023 Monowar Bhuyan </div>
+				<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
+				<div class="quotes">
+					<div>“Failure is success in progress” ― Albert Einstein</div>
+					<br>
+					<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
+						perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
+				</div>
+			</div>
 
 		<script type="text/javascript">
 			var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
