--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 			</div>
 
 			<h3 class="content_separation">Funded by</h3>
-
+			<div>We gratefully acknowledge support from the grant agencies below.</div>
 			<div id="funded-by">
 				<div>
 					<a href="https://ec.europa.eu/info/funding-tenders/opportunities/portal/screen/home"
@@ -236,8 +236,9 @@
 					</a>
 				</div>
 			</div>
+			<br><br><br>
 
-			<h3 class="content_separation">Universities (alumni and worked):</h3>
+			<!-- <h3 class="content_separation">Universities (alumni and worked):</h3>
 
 			<div id="alumni-worked">
 				<a href="http://www.naist.jp/en/" target="_blank">
@@ -254,7 +255,7 @@
 				</a>
 				<a href="http://www.iete.org/" target="_blank">
 					<img src="pics/logo_iete.jpg" style="width:80px;height:80px;border:0"> </a>
-			</div>
+			</div> -->
 		</div>
 		<div>
 			<div class="navigation">
@@ -281,8 +282,14 @@
 				</ul>
 			</div>
 			<div id="footer">
-				<p>&copy; 2023 Monowar Bhuyan </p>
+				<div>&copy; 2023 Monowar Bhuyan </div>
 				<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
+				<div class="quotes">
+					<div>“Failure is success in progress” ― Albert Einstein</div>
+					<br>
+					<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
+						perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
+				</div>
 			</div>
 		</div>
 
