--- a/members.html
+++ b/members.html
@@ -89,11 +89,16 @@
 				<div class="nav_border"></div>
 				<li class="selected"><a href="members.html">Members</a></li>
 				<div class="nav_border"></div>
+				<li><a href="alumni.html">Alumni</a></li>
+				<div class="nav_border"></div>
 				<li><a href="research.html">Research</a></li>
 				<div class="nav_border"></div>
 				<li><a href="publications.html">Publications</a></li>
 				<div class="nav_border"></div>
 				<li><a href="openings.html">Openings</a></li>
+				<div class="nav_border"></div>
+				<!-- Please add the external blog link here -->
+				<li><a href="#" target="_blank">Blog</a></li> 
 				<div class="nav_border"></div>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
@@ -274,148 +279,8 @@
 					<li>University of Malakand, Pakistan, 2021</li>
 				</ul>
 			</div>
-
-			<h3 class="content_separation">Alumni (Postdocs, PhD Students, Visitors, and Interns)</h3>
-			<div class="profile_sections">
-				Those who worked with my Team but not forgotten.
-				<br>
-				<br>
-				<h3>Past Postdocs</h3>
-				<br>
-				<ol>
-					<li><b>Xuan-Son Vu</b> (2020 - 2022), now Senior Research Engineer, Umeå University, Sweden</li>
-				</ol>
-				<br>
-				<h3>Past PhD Students</h3>
-				<br>
-				<ol>
-					<li><b>Tobias Sundqvist</b> (Co-advisor, ADSlab, Department of Computing Science, UMU), <i>Machine
-							Learning-based Diagnostics and Observability in Mobile Networks</i>, April 2023 [led the
-						project].</li>
-					<li><b>Enkhtur Tsogbaatar</b> (Co-advisor, IPlab, NAIST, Japan), <i>Deep Learning-based Cyberattacks
-							Behaviour
-							Analysis for IoT Ecosystem</i>, February 2022 [led the project].</li>
-				</ol>
-				<br>
-				<h3>Past Interns</h3>
-				<br>
-				<ol>
-					<li>Ryosuke Araki, Master in Cybersecurity student at Nara Institute of Science and Technology
-						(NAIST),
-						Nara, Japan. [Period: November 2022 - April 2023].</li>
-
-					<li>Himika Das, Master in Applied Mathematics student at Indian Institute of Science Education and
-						Research (IISER), Tirupati, India. [Period: May-August, 2022].</li>
-
-					<li><a href="https://www.linkedin.com/in/adil/">Adil Bin Bhutto</a>, B.Tech. in Computer Science and Engineering final year student at Tezpur
-						University
-						(a Central University), India. [Period: February 2021 - April 2022].</li>
-				</ol>
-				<br>
-				<h3>Past Postgraduate Students</h3>
-				<ol>
-					<br>
-					<b>2022</b>
-					<li>Johannes Lindkvist, MS in Computing Science and Engineering, Autumn 2021 (VSI-DDoS Detection and
-						Resolution in Serverless Computing), Department of Computing Science, Umeå University, Sweden.
-					</li>
-
-					<br>
-					<b>2021</b>
-
-					<li>Kian Nassiry, MS in Computing Science and Engineering, Spring 2021 (Evaluation Of Cloud Native
-						Message Queues), Department of Computing Science, Umeå University, Sweden.</li>
-					<li>Robin Wallace, MS in Computing Science and Engineering, Spring 2021 (Evaluation of
-						Function-as-a-Service Frameworks for Kubernetes), Department of Computing Science, Umeå
-						University,
-						Sweden. </li>
-					<li>Jacob Ardnor, MS in Computing Science and Engineering, Spring 2021 (Performance impact analysis
-						for
-						distributed tracing infrastructures at scale), Department of Computing Science, Umeå University,
-						Sweden.</li>
-
-					<br>
-					<b>2020</b>
-					<li>Nils Hedin, MS in Computing Science and Engineering, June 2020 (Securing Distributed File
-						Systems
-						for Kubernetes), Department of Computing Science, Umeå University, Sweden.</li>
-					<li>Sebastian Olsson, MS in Computing Science and Engineering, June 2020 (Self-driving Failure
-						Analysis
-						and Prediction in Apache Kafka), Department of Computing Science, Umeå University, Sweden.</li>
-					<li>Alexander Ekström, MS in Computing Science and Engineering, June 2020 (Fault-tolerance Testing:
-						Monolithics vs. Microservices), Department of Computing Science, Umeå University, Sweden.</li>
-
-					<br>
-					<b>2019</b>
-
-					<li>Kristoffer Landfors, MS in Computing Science and Engineering, June 2019 (Detection and
-						Resolution of
-						VSI-DDoS Attacks for Containerized Clouds), Department of Computing Science, Umeå University,
-						Sweden.
-					</li>
-					<li>Olof Holmlund, MS in Computing Science and Engineering, June 2019 (Evaluating record linkage
-						methods
-						for manifold identity detection), Department of Computing Science, Umeå University, Sweden.</li>
-
-					<br>
-					<b>2016</b>
-
-					<li>Deepjyoti Das, MSc in Information Technology, 2015-16 (A Secure Biometric-based Privacy
-						Preservation
-						Protocol for Cloud Data Storage), School of Computing Science, Assam Kaziranga University,
-						Jorhat,
-						India.</li>
-					<li>Gautam Muktiar, MSc in Information Technology, 2015-16 (Outlier-based Approach to Detect
-						Distributed
-						DoS Attacks), School of Computing Science, Assam Kaziranga University, Jorhat, India.</li>
-				</ol>
-				<br>
-
-				<h3>Past Undergraduate Students</h3>
-				<ol>
-					<br>
-					<b>2017</b>
-					<li>Mainong Jenbum Singpho, BTech CSE 8th Semester (Design Student Tracking and Support System to
-						Help
-						Course Instructors)</li>
-					<li>Ram Prajapat, BTech (CSE) 8th Semester (NFC-enabled Payment Solution through Multi-model
-						Biometric
-						Authentication)</li>
-					<li>Rashmi Sarmah, BTech (CSE) 8th Semester (IoT Enabled Smart Home Module)</li>
-					<li>Manasjyoti Bhuyan, BTech (CSE) 8th Semester (IoT Enabled Smart Home Module)</li>
-
-					<br>
-					<b>2016</b>
-
-					<li>Ram Prajapat, BTech (CSE) 7th Semester (Simulation of Real-time Road Traffic Control System)
-					</li>
-					<li>Shubham Chetry, BTech (CSE) 7th Semester (Development of DNS Amplification Attack Detection)
-					</li>
-					<li>Jafar Sharif, BTech (CSE) 7th Semester (Development of DNS Amplification Attack Detection)</li>
-					<li>Rashmi Sarmah, BTech (CSE) 7th Semester (Development of IoT Enabled Smart Home System)</li>
-					<li>Manasjyoti Bhuyan, BTech (CSE) 7th Semester (Development of IoT Enabled Smart Home System)</li>
-					<li>Saurabh Choudhury, BTech (CSE) 8th Semester (2-PAKE Cryptographic Protocol Design)</li>
-					<li>Abhishek Kalwar, BTech (CSE) 8th Semester (Design and Analysis of Graph-based Visualization Tool
-						to
-						Detect Low-rate Attack Detection)</li>
-
-					<br>
-					<b>2015</b>
-
-					<li>Biswajit Bora and Manish Jain, B.Tech. (CSE) 7th Semester (Mobile Application Development)</li>
-					<li>Bikiran Das and Souravjyoti Barman, B.Tech. (CSE) 7th Semester (Mobile Application Development)
-					</li>
-					<li>Devraj Sarma and Pankaj Borah, B.Tech. (CSE) 7th Semester (Mobile Application Development)</li>
-					<br>
-				</ol>
-				<br>
-				<br>
-			</div>
-
-
-
-
 		</div>
+		<br><br><br>
 
 
 		<div class="navigation">
@@ -426,18 +291,29 @@
 				<div class="nav_border"></div>
 				<li class="selected"><a href="members.html">Members</a></li>
 				<div class="nav_border"></div>
+				<li><a href="alumni.html">Alumni</a></li>
+				<div class="nav_border"></div>
 				<li><a href="research.html">Research</a></li>
 				<div class="nav_border"></div>
 				<li><a href="publications.html">Publications</a></li>
 				<div class="nav_border"></div>
 				<li><a href="openings.html">Openings</a></li>
 				<div class="nav_border"></div>
+				<!-- Please add the external blog link here -->
+				<li><a href="#" target="_blank">Blog</a></li> 
+				<div class="nav_border"></div>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 		<div id="footer">
-			<p>&copy; 2023 Monowar Bhuyan </p>
+			<div>&copy; 2023 Monowar Bhuyan </div>
 			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
+			<div class="quotes">
+				<div>“Failure is success in progress” ― Albert Einstein</div>
+				<br>
+				<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
+					perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
+			</div>
 		</div>
 
 	</div>
