--- a/group.html
+++ b/group.html
@@ -89,11 +89,16 @@
 				<div class="nav_border"></div>
 				<li><a href="members.html">Members</a></li>
 				<div class="nav_border"></div>
+				<li><a href="alumni.html">Alumni</a></li>
+				<div class="nav_border"></div>
 				<li><a href="research.html">Research</a></li>
 				<div class="nav_border"></div>
 				<li><a href="publications.html">Publications</a></li>
 				<div class="nav_border"></div>
 				<li><a href="openings.html">Openings</a></li>
+				<div class="nav_border"></div>
+				<!-- Please add the external blog link here -->
+				<li><a href="#" target="_blank">Blog</a></li> 
 				<div class="nav_border"></div>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
@@ -141,19 +146,30 @@
 				<div class="nav_border"></div>
 				<li><a href="members.html">Members</a></li>
 				<div class="nav_border"></div>
+				<li><a href="alumni.html">Alumni</a></li>
+				<div class="nav_border"></div>
 				<li><a href="research.html">Research</a></li>
 				<div class="nav_border"></div>
 				<li><a href="publications.html">Publications</a></li>
 				<div class="nav_border"></div>
 				<li><a href="openings.html">Openings</a></li>
 				<div class="nav_border"></div>
+				<!-- Please add the external blog link here -->
+				<li><a href="#" target="_blank">Blog</a></li> 
+				<div class="nav_border"></div>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div id="footer">
-			<p>&copy; 2023 Monowar Bhuyan </p>
-			<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
-		</div>
+			<div id="footer">
+				<div>&copy; 2023 Monowar Bhuyan </div>
+				<div>Designed by <a href="https://www.linkedin.com/in/joud/" target="_blank">Joud Al Mualem</a></div>
+				<div class="quotes">
+					<div>“Failure is success in progress” ― Albert Einstein</div>
+					<br>
+					<div>“If four things are followed - having a great aim, acquiring knowledge, hard work, and
+						perseverance - then anything can be achieved” ― APJ Abdul Kalam</div>
+				</div>
+			</div>
 
 	</div>
 
